# fund-helper

./: .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  cli.js  codecov.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: backend.yml  ci.yml  frontend.yml  ml.yml  rust.yml
backend/: .eslintignore  .eslintrc.js  .prettierignore  README.md  package-lock.json  package.json  webpack.config.js
backend-ts/: .eslintrc.js  jest.config.js  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.check.json  tsconfig.json
backend-ts/scripts/: register-tsnode.js
backend-ts/src/: main.ts
frontend/: .eslintignore  .eslintrc.js  .gitattributes  .prettierignore  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/config/: register-tsnode.js
frontend/jest/: rendered-snapshot.ts  setup.ts
frontend/src/: index.tsx
frontend/storybook/: main.js
ml/: cli.js  package-lock.json  package.json  tsconfig.json
ml/params/: .eslintrc.js  test-params.ts
ml/src/: http.ts  log.ts  main.ts
protos/: fund-cn.proto.ts
shared/eslint/: eslintrc.js  package.json
shared/protos/: package.json
shared/utils/: package.json
src/: cli.ts  main.rs
src/analyze/: analyze.ts  math.ts
src/commands/: commands.rs  mod.rs  server.rs  statistics.ts
src/models/: fund_list.rs  fund_value.rs  mod.rs
src/services/: deserializer.rs  east_money_service.rs  fund_list.rs  fund_value.rs  http.rs  http_service.rs  mod.rs
src/utils/: eval.ts  (+8 more)
(+176 files in other folders)
