[package]
name = "fund-helper"
version = "0.1.0"
authors = ["eric wang <wjun0912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.4", features = ["json"] }
futures = "0.3.4"
tokio = { version = "0.2.18", features = ["full"] }
async-trait = "0.1.30"
mockall = "0.7.0"
serde_json = "1.0.51"
