[package]
name = "fund-helper"
version = "0.1.0"
authors = ["eric wang <wjun0912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
scraper = "0.11"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.17"
serde_yaml = "0.8"
chrono = "0.4"
