[package]
name = "fund-helper"
version = "0.1.0"
authors = ["eric wang <wjun0912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
scraper = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.5"
serde_yaml = "0.8"
chrono = "0.4"